tests/fixtures/valid/if_else_return_int.torel
unit fixtures.if_else_return_int;

export proc main() -> Int32 {
    if true {
        return 1;
    } else {
        return 2;
    }
}
