tests/fixtures/invalid/if_one_branch_missing_return.torel
unit fixtures.if_one_branch_missing_return;

export proc main() -> Int32 {
    if true {
        return 1;
    } else {
        fix answer: Int32 = 2;
    }
}
